--- a/shelter/style.css
+++ b/shelter/style.css
@@ -46,7 +46,7 @@ h5{
 .p-s{
   margin: 0;
 }
-h1, h2, h3, h4, h5, h6, p{
+p{
   margin: 0;
 }
 
@@ -92,12 +92,12 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 .not-only{
-  background-image: 
-      url('imgs/noise_transparent.png'), 
+ background-image: 
+      url('imgs/noise_transparent@2x.png'),
       radial-gradient(circle at top left, #5B483A, #262425), 
       url(imgs/not-only-background.jpg);
-      background-size: auto, auto, cover;
-      background-repeat: repeat, no-repeat, no-repeat;
+  background-size: auto, auto, cover;
+  background-repeat: repeat, no-repeat, no-repeat;
   padding-top: 180px;
   height: 728px;
 }
@@ -174,16 +174,90 @@ h1, h2, h3, h4, h5, h6, p{
 
 .pets{
   background-color: var(--color-light-l);
+  padding: 80px 40px 100px 40px;
 }
 .pets-content{
-  margin: 80px 40px 100px 40px;
+
 }
 .pets-header{
+  color: var(--color-dark-l);;
   margin: 0 400px 0 400px;
   text-align: center;
   width: 400px;
 }
 .pets-slider{
-  background-color: red;
   margin-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.pets-slider-left, .pets-slider-right{
+  height: 6px;
+  width: 14px;
+}
+.pets-slider-left-button{
+  border-radius: 100px;
+  height: 52px;
+  width: 52px;
+  margin-right: 8px;
+  background-color: var(--color-light-xl);
+  border: var(--color-primary) solid 2px;
+} 
+.pets-slider-right-button{
+  border-radius: 100px;
+  height: 52px;
+  width: 52px;
+  margin-left: 8px;
+  background-color: var(--color-light-xl);
+  border: var(--color-primary) solid 2px;
+}
+.card{
+  background-color: var(--color-light-s);
+  border-radius: 9px;
+  margin-left: 45px;
+  margin-right: 45px;
+}
+.card-image{
+  
+}
+.card-text{
+  font-size: 20px;
+  font-family: Georgia;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: var(--color-dark-l);
+  letter-spacing: 0.06em;
+}
+.card-button{
+  border-radius: 100px;
+  height: 52px;
+  width: 187px;
+  display: block;
+  margin: 0 auto 30px auto;
+  background-color: var(--color-light-xl);
+  border: var(--color-primary) solid 2px;
+
+  color: var(--color-dark-3xl);
+  font-size: 17px;
+  font-family: Georgia;
+  text-align: center;
+  letter-spacing: 0.06em;
+  line-height: 1.3;
+}
+.pets-main-button{
+  border-radius: 100px;
+  height: 52px;
+  width: 261px;
+  display: block;
+  margin: 60px auto 0 auto;
+  background-color: var(--color-primary);
+  border: none;
+
+  color: var(--color-dark-3xl);
+  font-size: 17px;
+  font-family: Georgia;
+  text-align: center;
+  letter-spacing: 0.06em;
+  line-height: 1.3;
 }
