--- a/shelter/style.css
+++ b/shelter/style.css
@@ -33,6 +33,11 @@ h3{
 }
 h4{
   margin: 0;
+  font-weight: 100;
+  font-size: 20px;
+  font-family: Georgia;
+  letter-spacing: 0.06em;
+  line-height: 1.15;
 }
 h5{
   margin: 0;
@@ -260,4 +265,37 @@ p{
   text-align: center;
   letter-spacing: 0.06em;
   line-height: 1.3;
+}
+
+.help{}
+.help-content{
+  margin: 40px 100px 40px 80px;
+}
+.help-heading{
+  text-align: center;
+  width: 308px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+}
+.list{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 55px;
+  column-gap: 120px;
+  width: 1029px;
+}
+.list-item{
+  height: 113px;
+}
+.list-img{
+  width: 60px;
+  height: 60px;
+  display: block;
+  margin: 0 auto;
+}
+.list-text{
+  margin-top: 30px;
+  color: var(--color-dark-l);
+  text-align: center;
 }
