--- a/shelter/style.css
+++ b/shelter/style.css
@@ -25,7 +25,7 @@ h2{
 }
 h3{
   margin: 0;
-  font-weight: 100;
+  font-weight: normal;
   font-size: 35px;
   font-family: Georgia;
   letter-spacing: 0.06em;
@@ -33,7 +33,7 @@ h3{
 }
 h4{
   margin: 0;
-  font-weight: 100;
+  font-weight: normal;
   font-size: 20px;
   font-family: Georgia;
   letter-spacing: 0.06em;
@@ -41,7 +41,7 @@ h4{
 }
 h5{
   margin: 0;
-  font-weight: 100;
+  font-weight: normal;
   font-size: 15px;
   font-family: Georgia;
   letter-spacing: 0.06em;
@@ -134,6 +134,7 @@ p{
 }
 .not-only-button{
   border-radius: 100px;
+  border: none;
   padding-left: 45px;
   padding-right: 45px;
   padding-top: 15px;
@@ -274,7 +275,7 @@ p{
 
 .help{}
 .help-content{
-  margin: 40px 100px 40px 80px;
+  margin: 80px 40px 100px 40px;
 }
 .help-heading{
   text-align: center;
@@ -316,7 +317,10 @@ p{
   
 }
 .donation-img{
+  height: 261px;
   margin-right: 30px;
+  margin-top: 11px;
+  margin-bottom: 10px;
 }
 .donation-inner-content{
   width: 380px;
@@ -351,10 +355,44 @@ p{
 .donation-info{
   color: var(--color-dark-m);
   font-size: 12px;
+  line-height: 18px;
   font-family: Arial;
   font-style: italic;
   margin-top: 18px;
   margin-bottom: 18px;
 }
 
-footer{}
+footer{
+  background-image: 
+      url('imgs/noise_transparent@2x.png'),
+      radial-gradient(circle at top left, #5B483A, #262425), 
+      url(imgs/not-only-background.jpg);
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 40px;
+}
+.footer-container{
+  display: flex;  
+  gap: 160px;
+}
+.footer-contacts{
+  width: 280px;
+} 
+.footer-location{
+  width: 302px;
+}
+.footer-heading{
+  color: var(--color-light-xl);
+}
+.footer-inner-container{
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.footer-icon{
+  margin-right: 20px;
+}
+.footer-info{
+  color: var(--color-primary);
+}
+.footer-puppy{}
