fix: header 768px width

--- a/shelter/style-our-pets.css
+++ b/shelter/style-our-pets.css
@@ -23,10 +23,10 @@
 }
 html{
   overflow-x: hidden;
-  overflow-y: hidden;
   scroll-behavior: smooth;
 }
 body {
+  /* padding: 0 calc(20px - (100vw - 100%)) 0 0; */
   margin: 0 auto;
 }
 
