--- a/shelter/style-our-pets.css
+++ b/shelter/style-our-pets.css
@@ -89,11 +89,7 @@ button{
   box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.1);
 }
 
-.wrap{
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-}
+
 .header{
   width: 100%;
   height: 90px;
@@ -160,10 +156,15 @@ button{
 }
 
 .main{
-  height: 1262px;
   width: 100%;
   background-color: var(--color-light-l);
   padding-top: 80px;
+}
+.wrap{
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-bottom: 100px;
 }
 .main-content{
   width: calc(100% - 80px);
@@ -194,6 +195,7 @@ button{
   border-radius: 9px;
   width: 270px;
   height: 435px;
+  margin: 0 auto;
 }
 .card:hover{
   box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
@@ -294,10 +296,16 @@ footer{
   padding-right: 40px;
   padding-top: 40px;
 }
+.footer-wrap{
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
 .footer-container{
   display: flex;  
   gap: 160px;
   margin-left: 40px;
+  width: 740px; /*TODO*/
 }
 .footer-contacts{
   width: 280px;
@@ -340,7 +348,10 @@ footer{
 .email-link:hover h4, .phone-link:hover h4, .location-link:hover h4{
   color: var(--color-primary-light);
 }
-.footer-puppy{}
+.footer-puppy{
+  display: inline-block;
+  margin-left: auto;
+}
 
 
 @media (max-width: 1280px){
@@ -355,12 +366,12 @@ footer{
   }
 
   .card-container{
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     row-gap: 30px;
     column-gap: 40px;
   }
   .wrap{
-
+    padding-bottom: 76px;
   }
   .main{
 
@@ -379,6 +390,15 @@ footer{
   .pagination-container{
     margin-top: 40px;
   }
+  .hidden-768{
+    display: none;
+  }
+
+
+
+
+
+  
 }
 @media (max-width: 768px){
   .card-container{
