--- a/shelter/style.css
+++ b/shelter/style.css
@@ -23,6 +23,7 @@
 }
 
 html{
+  min-width: 320px;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -95,19 +96,36 @@ button:hover{
 }
 .header{
   width: 100%;
+  height: 90px;
   margin-top: 30px;
   position: absolute;
 }
 .header-wrap{
+  max-width: 1280px;
   width: 100%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
+}
+.header-hamburger-button{
+  display: none;
+  margin-right: 14px;
+  color: none;
+  background-color: var(--color-light-xl);
+  border: none;
+  border-radius: 15px;
+  transition: background-color 0.2s;
+}
+.header-hamburger-button:hover{
+  background-color: var(--color-light-s);
+}
+.header-hamburger-img{
+  display: none;
 }
 .header-title{
   text-align: left;
   align-items: center;
+  margin-left: 40px;
 }
 .header-main-title{
   color: var(--color-primary);
@@ -130,7 +148,8 @@ button:hover{
 }
 .header-links{
   display: flex;
-  gap: 35px;
+  margin-right: 40px;
+  gap: 36px;
   align-items: center;
 }
 .header-link{
@@ -142,6 +161,7 @@ button:hover{
   font-weight: 400;
   font-family: 'Arial';
   transition: color 0.2s;
+  margin-bottom: 5px;
 }
 .header-link:hover{
   color: var(--color-light-s);
@@ -164,23 +184,25 @@ button:hover{
   background-repeat: repeat, no-repeat, no-repeat;
   background-size: 6%, cover;
   padding-top: 180px;
+  height: 728px;
 }
 .wrap{
   width: 100%;
-  max-width: 1200px;
+  max-width: 1280px;
   margin: 0 auto;
 }
 .not-only-content{
-  width: 100%;
-  max-width: 1200px;
+  width: 1200px;
   height: 728px;
+  margin-left: 40px;
+  margin-right: 40px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
 }
 .not-only-inner-content{
-  max-width: 460px;
+  width: 460px;
   height: 322px;
+  margin-top: 163px;
 }
 .not-only-title{
   width: 310px;
@@ -206,8 +228,7 @@ button:hover{
   margin-top: 42px;
 }
 .not-only-puppy{
-  display: block;
-  margin-left: auto;
+
 }
 
 .about{
@@ -247,18 +268,18 @@ button:hover{
   padding: 80px 40px 100px 40px;
 }
 .pets-content{
-  margin-left: 40px;
-  width: 1200px;
+  width: 100%;
 }
 .pets-header{
   color: var(--color-dark-l);
-  margin: 0 400px 0 400px;
+  margin: 0 auto;
   text-align: center;
   width: 400px;
 }
 .pets-slider{
   margin-top: 60px;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .pets-slider-left, .pets-slider-right{
@@ -405,7 +426,7 @@ button:hover{
 .donation-content{
   display: flex;
   height: 282px;
-  margin-left: 180px;
+  justify-content: center;
 }
 .donation-img{
   height: 261px;
@@ -471,22 +492,26 @@ footer{
         url(imgs/footer-background.svg);
   background-repeat: repeat, no-repeat, no-repeat;
   background-size: 6%, auto, 100em;
-  padding-left: 40px;
-  padding-right: 40px;
   padding-top: 40px;
 }
+.footer-wrap{
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
 .footer-container{
-  display: flex;  
-  gap: 160px;
-  margin-left: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;  
 }
 .footer-contacts{
   width: 280px;
   gap: 40px;
+  margin-left: 40px;
 } 
 .footer-location{
   width: 302px;
   gap: 40px;
+  margin-left: 52px;
 }
 .footer-heading{
   margin-top: 15px;
@@ -521,10 +546,107 @@ footer{
 .email-link:hover h4, .phone-link:hover h4, .location-link:hover h4{
   color: var(--color-primary-light);
 }
-.footer-puppy{}
+.footer-puppy{
+  display: block;
+  margin-left: auto;
+  margin-right: 40px;
+}
 
-@media (max-width: 1280px){
-  .header-wrap, .wrap, .not-only-content{
-    max-width: 92.2vw;
+
+@media (max-width: 1279px){
+  .header-title{
+    margin-left: 30px;
+  }
+  .header-links{
+    margin-right: 30px;
+  }
+
+  .hidden-768{
+    display: none;
+  }
+  .footer-container{
+    grid-template-columns: 1fr 1fr;
+  }
+  .footer-contacts{
+    margin-left: 63px;
+    margin-top: -25px;
+  } 
+  .footer-location{
+    margin-left: 20px;
+    margin-top: -25px;
+  }
+  .footer-puppy{
+    margin-top: 60px;
+    margin-left: 61%;
+  }
+}
+@media (max-width: 767px){
+  
+  .header-title{
+    margin-left: 20px;
+  }
+  .header-hamburger-button{
+    display: block;
+  }
+  .header-hamburger-img{
+    display: block;
+  }
+
+  .footer-container{
+    grid-template-columns: 1fr;
+  }
+  .hidden-320, .hidden-768{
+    display: none;
+  }
+  .pagination-container{
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 40px;
+    column-gap: 10px;
+  }
+
+
+  .footer-container{
+    grid-template-columns: 1fr;
+  }
+  .footer-heading{
+    width: calc(100% - 42px);
+    font-size: 25px;
+    text-align: center;
+    margin-top: -9px;
+    margin-left: 20px;
+  }
+  .footer-inner-container{
+    justify-content: center;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .footer-contacts{
+    width: calc(100% - 20px);
+    margin: 0 auto;
+    height: 208px;
+  } 
+  .footer-location{
+    width: calc(100% - 20px);
+    margin: 0 auto;
+    margin-top: 40px;
+    height: 222px;
+  }
+  .footer-loc-icon{
+    margin-top: 5px;
+    margin-left: -25px;
+  }
+  .footer-location-info{
+    margin-top: 2px;
+  }
+  .footer-puppy{
+    margin-top: 30px;
+    margin-left: calc(30% - 64px);
+    width: 260px;
+  }
+}
+@media (max-width: 319px){
+  html{
+    overflow-x: scroll;
   }
 }
